--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,8 @@ project(ili9486)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(ili9486 main.cpp)
+file(GLOB sourceFiles *.cpp)
+
+add_executable(ili9486 main.cpp display.cpp spi.cpp)
 
 target_link_libraries(ili9486 bcm_host)
