--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,6 @@ set(CMAKE_C_STANDARD 99)
 
 file(GLOB sourceFiles *.c)
 
-add_executable(ili9486 main.c ili9486.c armbianio.c)
+add_executable(ili9486 main.c ili9486.c)
 
 target_link_libraries(ili9486 bcm_host)
