--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,4 +7,4 @@ file(GLOB sourceFiles *.c)
 
 add_executable(ili9486 main.c ili9486.c)
 
-target_link_libraries(ili9486 bcm_host)
+target_link_libraries(ili9486)
